Move logging unit tests to new package and configure Jacoco.
Also ensure that Jacoco isn't enabled for anything other than unit
tests.